CacheService changes version jdk 11 to 8. FacesDetector the app is working.